fix more z-index style issues

--- a/styles/index.less
+++ b/styles/index.less
@@ -19,7 +19,7 @@ body {
     box-sizing: border-box;
 
     background: #ffffff;
-    z-index: 2;
+    z-index: 0;
 }
 
 @import "./widgets/hexagonsTitle.less";
