--- a/styles/widgets/hexagonsTitle.less
+++ b/styles/widgets/hexagonsTitle.less
@@ -2,6 +2,6 @@
     canvas {
         pointer-events: none;
         position: absolute;
-        z-index: 1;
+        z-index: 2;
     }
 }
