--- a/styles/widgets/stickyBar.less
+++ b/styles/widgets/stickyBar.less
@@ -11,6 +11,7 @@
     height: @height;
     background-color: @theme-color;
     background-image: linear-gradient(169deg, @theme-color-0, @theme-color-1);
+    z-index: 1;
 
     .text {
         @padding: 16px;
